--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ requests	==		2.31.0
 rich	==			13.5.2
 rpds-py	==			0.10.2
 scikit-learn	==		1.1.3
-scipy	==			1.12.0
+scipy	>=			1.12.0
 seaborn	==			0.12.2
 semver	==			3.0.1
 setuptools	==		68.1.2
